Reconfigured Swagger to generate GreeterController and LedgerController rather than ProdController and EntryController.
